# coursework_6_skymarket

./: .gitignore  README.md
skymarket/: pyproject.toml
skymarket/ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_auto_20230128_2153.py  0003_auto_20230130_1808.py
skymarket/ads/urls/: ad.py  comment.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
skymarket/users/migrations/: 0001_initial.py  0002_user_is_active.py  0003_auto_20230130_1808.py
