[tool.poetry]
name = "skymarket"
version = "0.1.0"
description = ""
authors = ["Glassyflute <yuliya.bobir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
drf-spectacular = "^0.25.1"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
